--- a/cpp/makefile
+++ b/cpp/makefile
@@ -7,23 +7,24 @@ CXXFLAGS = -Wall -g
 # ****************************************************
 # Targets needed to bring the executable up to date
 
-test: test.o game.o matrix.o player.o queue.o 
-	$(CXX) $(CXXFLAGS) -o test.o game.o matrix.o player.o queue.o 
+main: main.o game.o matrix.o player.o queue.o 
+	$(CXX) $(CXXFLAGS) main.o game.o matrix.o player.o queue.o -o main
 
+main.o: main.cpp
+	$(CXX) $(CXXFLAGS) -c main.cpp
 
-test.o: test.cpp
-	$(CXX) $(CXXFLAGS) -c test.cpp
-
-game.o: game.cpp matrix.h queue.h
+game.o: game.cpp game.h
 	$(CXX) $(CXXFLAGS) -c game.cpp
 
 matrix.o: matrix.cpp matrix.h
 	$(CXX) $(CXXFLAGS) -c matrix.cpp
 
-player.o: player.cpp matrix.h queue.h player.h
+player.o: player.cpp player.h
 	$(CXX) $(CXXFLAGS) -c player.cpp
 
-queue.o: queue.cpp matrix.h queue.h
+queue.o: queue.cpp queue.h
 	$(CXX) $(CXXFLAGS) -c queue.cpp
 
+clean:
+	rm *.o main
 
